# pb_ram_explosion

./: app.py
example/: example_pb2.py
go/: example.pb.go  example.proto  go.mod  main.go
python/: app.py  test.sh
python/example/: example.proto  example_pb2.py
rust/: Cargo.toml  build.rs  example.proto
rust/src/: main.rs
