[package]
name = "rust"
version = "0.1.0"
authors = ["christopher-henderson <chris@chenderson.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tonic, prost, bytes, and tokio are brought in to support gRPC clients used for
# games of test ping:pong
tonic = { version = "0.3.0", features = ["tokio-rustls", "transport", "tls"] }
prost = "0.6.1"
bytes = "0.5"

# The build system itself is a Rust program that may require its own dependencies.
[build-dependencies]
# chrono gives us the build timestamp that you see at the beginning of the REPL
chrono = "0.4.6"
# This generates the Rust code from the gRPC IDL file before compile time.
# This version MUST be the same as the version of tonic in the [dependencies] section!
tonic-build = "0.3.0"